# automatise

./: .gitignore  LICENSE  README.md  __init__.py  analysis.py  app.py  classifiers.py  main.py  movelets.py  preprocessing.py  pyproject.toml  requirements.txt  results.py  run.py  script.py  setup.py  visualization.py
assets/: appstyle.css  config.py  experimental_history.csv
assets/examples/: Automatise_Sample_Code.ipynb  Automatize_Sample_Code.html  Automatize_Sample_Code.ipynb
assets/examples/Example/data/: Descriptor.json  Descriptor_hp.json  test.csv  train.csv
assets/method/: Dodge.md  HIPERMovelets.md  MARC.md  MASTERMovelets.md  Movelets.md  POIF.md  SUPERMovelets.md  Xiao.md  Zheng.md
assets/pages/: experiments.md  methods.md  publications.md  results.md
assets/routes/: page_analysis.py  page_datasets.py  page_experiments.py  page_results.py  subpage_models.py  subpage_trajectories.py
automatise.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
automatize.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
helper/: CDDiagram.py  datasets_inc.py  script_inc.py
helper/io/: ts_io.py
io/: converter.py
marc/: multi_feature_classifier.py
marc/core/: logger.py
marc/core/utils/: geohash.py  metrics.py
pois/: POIS-Classifier.py  POIS.py  poifreq.py
scripts/: Classifier-MLP.py  Classifier-MLP_RF.py  ExportResults.py  MAT-Classifier-All.py  MAT-ExportResults.py  MAT-MergeClasses.py  MAT-MoveDatasets.py  MAT-MoveletsCLS.py  MergeClasses.py  MoveDatasets.py  PrintResults.py  ResultsCheck.py
