[project]
name = "automatise"
version = "0.1.b21"
description = "Automatise: A Multiple Aspect Trajectory Data Mining Tool Library"
authors = [
    {name = "Tarlis Tortelli Portela", email = "tarlis@tarlis.com.br"},
]
maintainers = [
    {name = "Tarlis Tortelli Portela", email = "tarlis@tarlis.com.br"},
]
readme = "README.md"
keywords = [
    "data-science",
    "machine-learning",
    "data-mining",
    "trajectory",
    "multiple-trajectory",
    "trajectory-classification",
    "movelet",
    "movelet-visualization",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.7,<3.10"
dependencies = [
    "glob2==0.7",
    "numpy",
    "pandas==1.3.4",
]

[project.optional-dependencies]
all_extras = [
    "python-dateutil==2.8.2",
    "anytree==2.8.0",
    "chart-studio==1.1.0",
    "colorlover==0.3.0",
    "cycler==0.11.0",
    "graphviz==0.19.1",
    "jsonschema==4.3.1",
    "matplotlib==3.5.1",
    "mpld3==0.5.7",
    "networkx==2.6.3",
    "notebook==6.4.6",
    "plotly==5.4.0",
    "tensorflow",
    "pm4py",
    "geohash",
    "scikit-learn",
]

dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "wheel",
]

binder = [
    "jupyter",
]

docs = [
    "jupyter",
    "numpydoc",
]

dl = [
    "tensorflow",
]

[project.urls]
homepage = "https://github.com/ttportela/automatise"
repository = "https://github.com/ttportela/automatise"
documentation = "https://github.com/ttportela/automatise"
download = "https://pypi.org/project/automatise/#files"

[project.license]
text = 'GPL Version 3 or superior (see LICENSE file)'

[build-system]
requires = ["setuptools", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"